--- a/.github/workflows/cron_inactivity.yml
+++ b/.github/workflows/cron_inactivity.yml
@@ -1,5 +1,4 @@
 on:
-  push:
   schedule:
   - cron: '47 12 * * *'
 defaults:
@@ -30,7 +29,7 @@ jobs:
   refresh:
     runs-on: ubuntu-latest
     needs: check
-    #if: needs.check.outputs.need-refresh == 'yes'
+    if: needs.check.outputs.need-refresh == 'yes'
     timeout-minutes: 1
     steps:
     - name: Refresh repository
