cron: change DingTalk API endpoint

--- a/.github/workflows/cron.yml
+++ b/.github/workflows/cron.yml
@@ -22,7 +22,7 @@ jobs:
       run: |-
         if [ -n "$(git status --porcelain)" ]; then
         	export DINGTALK_BOT_MSG=$(cat version.txt)
-        	curl --header 'Content-Type: application/json' --data-raw "$(jq -n '{msgtype:"text",text:{content:env.DINGTALK_BOT_MSG}}')" "https://oapi.dingtalk.com/robot/send?access_token=$DINGTALK_BOT_TOKEN"
+        	curl --header 'Content-Type: application/json' --data-raw "$(jq -n '{msgtype:"text",text:{content:env.DINGTALK_BOT_MSG}}')" "https://youfu.work/hooks/dingtalk?access_token=$DINGTALK_BOT_TOKEN"
         	git config --global user.name 'GitHub Actions'
         	git config --global user.email "$(whoami)@$(hostname --fqdn)"
         	git add --all
